# FBD

./: .gitignore  LICENSE  README.md  check_gene_association_metadata.py  plan_cache.md  pyproject.toml
FBD/: .env  README.md  __init__.py  fbd.py  requirements.txt
FBD/client/: data_manager.py  downloader.py  parse.py  parser_dispatcher.py
FBD/core/: config.py  rate_limiter.py  supabase_client.py
examples/: get_all_columns_descriptions.py  main.py
test/: test_datamanager.py  test_downloader.py  test_fbd.py  test_parse.py
