[build-system]
requires = ["setuptools>=61,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flybasedownloads"
version = "4.0.0"
description = "Unofficial Python client for downloading and exploring FlyBase datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Javiera Quiroz Olave", email = "javiera.quiroz@biomedica.udec.cl" }
]

keywords = [
    "flybase",
    "drosophila",
    "bioinformatics",
    "genomics",
    "datasets",
    "biology"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]


dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
    "networkx>=2.8",
    "obonet>=1.0",
    "platformdirs>=3.0",
]

[project.urls]
Homepage = "https://github.com/JavieraQuirozO/FBD"

[tool.setuptools.packages.find]
where = ["."]
include = ["FBD*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
